@@ -17,6 +17,10 @@ SETUP:
 ENGINE:
 	- Added support for Apache 2.4.x branch
 	- Fixed: Plugin module is broken: Unable to disable, uninstall... any plugin
+	- Fixed: Plugin update must be triggered when plugin configuration is updated
+
+GUI:
+	- Fixed: Plugin update must be triggered when plugin configuration is updated
 
 Tickets:
 	- Fixed #745: Defect - Disk detail in dovecot doesn't include aliases
